<resources>
    <string name="app_name">MyAndroidLib</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_hello">Hello world!</string>

    <!-- vitamio lib -->
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers. </string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device. </string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>

    <string name="title_activity_text">HtmlText</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="title_activity_video_buffer">VideoBuffer</string>
    <string name="title_activity_baseadapter">BaseAdapter</string>

</resources>
